Fullscreen button overflow bug fixed

--- a/src/Frontend/src/components/course/Course/Slide/Blocks/Image/Image.less
+++ b/src/Frontend/src/components/course/Course/Slide/Blocks/Image/Image.less
@@ -4,7 +4,6 @@
   width: fit-content; // do not let image to be bigger then real size
   margin-bottom: 10px;
   border-radius: 8px;
-  overflow: hidden;
 }
 
 .wrapper .imageWrapper {
